--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QHBoxLayout" name="horizontalLayout_2">
+   <layout class="QHBoxLayout" name="horizontalLayout">
     <property name="spacing">
      <number>0</number>
     </property>
@@ -34,98 +34,25 @@
      <number>0</number>
     </property>
     <item>
-     <widget class="BackgroundWidget" name="background" native="true">
-      <layout class="QVBoxLayout" name="verticalLayout_2">
-       <item>
-        <layout class="QVBoxLayout" name="verticalLayout_3" stretch="4,1,0">
-         <property name="spacing">
-          <number>40</number>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <property name="spacing">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QStackedWidget" name="stackedWidget">
+        <property name="currentIndex">
+         <number>1</number>
+        </property>
+        <widget class="LandingPage" name="landingPage"/>
+        <widget class="ScaffoldDesigner" name="forgeView">
+         <property name="styleSheet">
+          <string notr="true">background-color: #303030;
+</string>
          </property>
-         <property name="bottomMargin">
-          <number>40</number>
-         </property>
-         <item>
-          <spacer name="verticalSpacer">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>40</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
-          <widget class="QWidget" name="widget_2" native="true">
-           <property name="styleSheet">
-            <string notr="true">QWidget {
-    background-color: rgba(0,0,0,0);
-}</string>
-           </property>
-           <layout class="QHBoxLayout" name="horizontalLayout">
-            <item>
-             <widget class="QPushButton" name="beginButton">
-              <property name="enabled">
-               <bool>true</bool>
-              </property>
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>150</width>
-                <height>16777215</height>
-               </size>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">QPushButton {
-        background-color: transparent;
-        border: none;
-        color: #f8f8f8;
-        font-size: 46px;
-        font-family: &quot;Roboto Bold&quot;, &quot;Segoe UI&quot;, sans-serif;
-        font-weight: bold;
-        text-transform: uppercase;
-    }
-
-    QPushButton:hover {
-        color: #ffffff;
-    }
-
-    QPushButton:pressed {
-        color: #aaaaaa;
-    }</string>
-              </property>
-              <property name="text">
-               <string>BEGIN</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </widget>
-         </item>
-         <item>
-          <spacer name="verticalSpacer_2">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>17</width>
-             <height>13</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-        </layout>
-       </item>
-      </layout>
-     </widget>
+        </widget>
+       </widget>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
@@ -178,9 +105,15 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>BackgroundWidget</class>
+   <class>LandingPage</class>
    <extends>QWidget</extends>
-   <header location="global">BackgroundWidget.h</header>
+   <header location="global">LandingPage.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>ScaffoldDesigner</class>
+   <extends>QWidget</extends>
+   <header location="global">ScaffoldDesigner.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
